; ModuleID = '/home/carl/AnghaBench/netdata/registry/extr_registry_log.c_registry_log_recreate.c'
source_filename = "/home/carl/AnghaBench/netdata/registry/extr_registry_log.c_registry_log_recreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32 }

@registry = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Cannot truncate registry log '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @registry_log_recreate() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %17

3:                                                ; preds = %0
  %4 = call i32 (...) @registry_log_close()
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %6 = call i32* @fopen(i32 %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %7 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %11 = call i32 @fclose(i32* %10)
  br label %15

12:                                               ; preds = %3
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 1), align 8
  %14 = call i32 @error(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %12, %9
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @registry, i32 0, i32 0), align 8
  %16 = call i32 (...) @registry_log_open()
  br label %17

17:                                               ; preds = %15, %0
  ret void
}

declare dso_local i32 @registry_log_close(...) #1

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @registry_log_open(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
